fix: resolve issue with homestay searching